// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircleSpaceEmbed > renders default as expected 1`] = `
<div>
  <iframe
    src="https://community.bluedot.org/c/events?iframe=true"
    style="border: 0px; box-shadow: none; width: 800px; height: 80vh;"
    title="Community discussion for events"
  />
</div>
`;

exports[`CircleSpaceEmbed > renders with custom args 1`] = `
<div>
  <iframe
    src="https://community.bluedot.org/c/events?iframe=true"
    style="border: 0px; box-shadow: none; width: 100%; height: 100%; min-height: 510px;"
    title="Community discussion for events"
  />
</div>
`;
